// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb /> Render must match inactive() 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class="breadcrumb-inactive"
  >
    <ol>
      <li
        class="breadcrumb-item"
        href="/fantastic-folder"
      >
        <a
          href="/fantastic-folder"
        >
          Fantastic Folder
        </a>
      </li>
      <li
        class="breadcrumb-item"
        href="/fantastic-folder/another-fantastic-folder"
      >
        <a
          href="/fantastic-folder/another-fantastic-folder"
        >
          Another Fantastic folder
        </a>
      </li>
      <li
        aria-current="page"
        class="breadcrumb-item breadcrumb-item-selected text-gray"
        href=""
      >
        One More Fantastic Folder
      </li>
    </ol>
  </nav>
</div>
`;

exports[`<Breadcrumb /> Render must match regular() 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
    class=""
  >
    <ol>
      <li
        class="breadcrumb-item"
        href="/fantastic-folder"
      >
        <a
          href="/fantastic-folder"
        >
          Fantastic Folder
        </a>
      </li>
      <li
        class="breadcrumb-item"
        href="/fantastic-folder/another-fantastic-folder"
      >
        <a
          href="/fantastic-folder/another-fantastic-folder"
        >
          Another Fantastic folder
        </a>
      </li>
      <li
        aria-current="page"
        class="breadcrumb-item breadcrumb-item-selected text-gray"
        href=""
      >
        One More Fantastic Folder
      </li>
    </ol>
  </nav>
</div>
`;
